Add modal & tooltip

--- a/sass/extend.scss
+++ b/sass/extend.scss
@@ -5,6 +5,11 @@
 	align-items: center;
 	justify-content: center;
 }
+%d-flex-between {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
 %pseudo-element {
 	content: "";
 	display: block;
