--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,18 @@
 @import "ui.css";
+@import "component.css";
 /* CSS Document */
 /* CSS Document */
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli&family=Noto+Serif+TC:wght@700&family=Playfair+Display:wght@700&display=swap");
-.profile figure figcaption .btnGroup, .profile figure, .cover {
+@import url("https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap");
+.profile figure, .cover {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.profile figure figcaption .btnGroup {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile figure figcaption p.quote:before, .cover:before {
@@ -70,7 +77,7 @@
 @media (min-width: 680px) {
   .profile figure figcaption {
     width: 35%;
-    margin: 0 50px;
+    margin: 0 70px;
   }
 }
 .profile figure figcaption h2 {
@@ -116,9 +123,47 @@
   }
 }
 .profile figure figcaption .btnGroup {
-  justify-content: space-between;
   border-top: thin solid rgba(0, 0, 0, 0.23);
   padding-top: 1rem;
+}
+.profile .modal .modal-body h3 {
+  margin-bottom: 1.2rem;
+  font-family: Playfair Display;
+}
+.profile .modal .modal-body .career {
+  display: flex;
+  margin: 2rem 1.5rem;
+}
+.profile .modal .modal-body .career .period {
+  width: 30%;
+}
+.profile .modal .modal-body .career .period .location {
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: 0.4rem;
+}
+.profile .modal .modal-body .career .description {
+  width: 70%;
+}
+.profile .modal .modal-body .career .description .jobTitle {
+  color: rgba(0, 0, 0, 0.8);
+  padding-bottom: 0.4rem;
+}
+@media (max-width: 680px) {
+  .profile .modal .modal-body .career {
+    display: block;
+    border-bottom: thin solid rgba(0, 0, 0, 0.23);
+    padding-bottom: 0.7rem;
+    margin: 1rem 0.5rem;
+  }
+  .profile .modal .modal-body .career .period {
+    width: 100%;
+  }
+  .profile .modal .modal-body .career .description {
+    width: 100%;
+  }
+  .profile .modal .modal-body .career .description .jobTitle {
+    margin-top: 0.6rem;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
