--- a/css/ui.css
+++ b/css/ui.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* CSS Document */
 /* CSS Document */
-body, html, figure, p {
+body, html, figure, p, h3 {
   margin: 0;
 }
 
@@ -37,16 +37,12 @@ img {
   background-color: transparent;
   border: thin solid rgba(0, 0, 0, 0.8);
 }
-.btn.icon img {
-  width: 15px;
-}
-.btn.icon:hover {
-  background-color: #FFFFFF;
+.btn.icon.icon-outline:hover {
+  background-color: rgba(0, 0, 0, 0.15);
   transition: all 1s ease-out;
 }
-.btn.icon:hover img {
-  transform: scale(1.5);
-  transition: inherit;
+.btn.icon img {
+  width: 15px;
 }
 .btn.icon.icon-sm {
   width: 35px;
@@ -54,12 +50,12 @@ img {
   line-height: 35px;
 }
 .btn.btn-primary {
-  padding: 8px 22px;
+  padding: 0.5rem 1rem;
 }
-.btn:hover span {
-  display: inline-block;
-  transform: scale(1.2);
-  transition: all 1s ease-out;
+.btn.btn-primary:hover {
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.6);
 }
 
 /*BEGIN font-size*/
