--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,9 @@
 ﻿@charset "utf-8";
 @import "ui.css";
+@import "component.css";
 @import "variable";
 @import "extend";
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli&family=Noto+Serif+TC:wght@700&family=Playfair+Display:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap');
 .cover {
 	@extend %d-flex-center;
 	position: relative;
@@ -55,7 +56,7 @@
 			margin: 0 20px;
 			@media (min-width: 680px) {
 				width: 35%;
-				margin: 0 50px;
+				margin: 0 70px;
 			}
 			h2 {
 				font-family: Playfair Display;
@@ -97,10 +98,50 @@
 				}
 			}
 			.btnGroup {
-				@extend %d-flex-center;
-				justify-content: space-between;
+				@extend %d-flex-between;
 				border-top: thin solid $light-gray;
 				padding-top: 1rem;
+			}
+		}
+	}
+	.modal {
+		.modal-body {
+			h3 {
+				margin-bottom: 1.2rem;
+				font-family: Playfair Display;
+			}
+			.career {
+				display: flex;
+				margin: 2rem 1.5rem;
+				.period {
+					width: 30%;
+					.location {
+						color: $gray;
+						margin-top: 0.4rem;
+					}
+				}
+				.description {
+					width: 70%;
+					.jobTitle {
+						color: rgba($black, 0.8);
+						padding-bottom: 0.4rem;
+					}
+				}
+				@media (max-width: 680px) {
+					display: block;
+					border-bottom: thin solid $light-gray;
+					padding-bottom: 0.7rem;
+					margin: 1rem 0.5rem;
+					.period {
+						width: 100%;
+					}
+					.description {
+						width: 100%;
+						.jobTitle {
+							margin-top: 0.6rem;
+						}
+					}
+				}
 			}
 		}
 	}	
