--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -2,7 +2,7 @@
 @import "variable";
 @import "extend";
 
-body, html, figure, p {
+body, html, figure, p, h3 {
 	margin: 0;
 }
 body, html {
@@ -32,18 +32,14 @@ img {
 		line-height: 40px;
 		&.icon-outline {
 			background-color: transparent;
-			border: thin solid rgba($black, .8);
+			border: thin solid rgba($black, 0.8);
+			&:hover {
+				background-color: rgba($black, 0.15);
+				transition: all 1s ease-out;
+			}
 		}
 		img {
 			width: 15px;
-		}
-		&:hover {
-			background-color: $white;
-			transition: all 1s ease-out;
-			img {
-				transform: scale(1.5);
-				transition: inherit;
-			}
 		}
 		&.icon-sm {
 			width: 35px;
@@ -52,13 +48,11 @@ img {
 		}
 	}
 	&.btn-primary {
-		padding: 8px 22px;
-	}
-	&:hover {
-		span {
-			display: inline-block;
-			transform: scale(1.2);
-			transition: all 1s ease-out;
+		padding: 0.5rem 1rem;
+		&:hover {
+			box-shadow: 0 3px 1px -2px $gray;
+			box-shadow: 0 2px 2px 0 $gray;
+			box-shadow: 0 1px 5px 0 $gray;
 		}
 	}
 }
