--- a/sass/variable.scss
+++ b/sass/variable.scss
@@ -3,4 +3,5 @@
 $white: #FFFFFF;
 $black: #000000;
 $gray: rgba($black,0.6);
-$light-gray: rgba($black,0.23)
+$light-gray: rgba($black,0.23);
+$lake-blue: #009999;
