--- a/css/ui.css
+++ b/css/ui.css
@@ -11,8 +11,13 @@ body, html {
   font-family: Muli;
 }
 
+h1, h2 {
+  font-family: Playfair Display;
+}
+
 img {
   max-width: 100%;
+  vertical-align: middle;
 }
 
 .btn {
@@ -31,7 +36,6 @@ img {
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  line-height: 40px;
 }
 .btn.icon.icon-outline {
   background-color: transparent;
@@ -43,11 +47,12 @@ img {
 }
 .btn.icon img {
   width: 15px;
+  position: relative;
+  top: -1px;
 }
 .btn.icon.icon-sm {
   width: 35px;
   height: 35px;
-  line-height: 35px;
 }
 .btn.btn-primary {
   padding: 0.5rem 1rem;
@@ -61,6 +66,10 @@ img {
 /*BEGIN font-size*/
 h1 {
   font-size: 4.3rem;
+}
+
+.f-44 {
+  font-size: 2.8rem;
 }
 
 .f-40 {
@@ -120,6 +129,10 @@ h1 {
 @media (max-width: 680px) {
   h1 {
     font-size: 10.5vmin;
+  }
+
+  .f-44 {
+    font-size: 9vmin;
   }
 
   .f-40 {
