--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,7 +27,6 @@
 		z-index: 1;
 		text-align: center;
 		h1 {
-			font-family: Playfair Display;
 			margin-bottom: 1rem;
 		}
 		p {
@@ -50,7 +49,7 @@
 		@media (max-width: 768px) {
 			flex-direction: column;
 		}
-		@media (min-width: 500px) and (max-width: 768px) {
+		@media (min-width: 500px) and (max-width: 880px) {
 			img {
 				width: 50%;
 			}
@@ -62,7 +61,6 @@
 				margin: 0 70px;
 			}
 			h2 {
-				font-family: Playfair Display;
 				@media (min-width: 768px) {
 					margin-top: 0;
 				}
@@ -98,6 +96,9 @@
 							top: -3px;
 						}
 					}
+					span {
+						display: inline-block;
+					}
 				}
 			}
 			.btnGroup {
@@ -112,6 +113,7 @@
 			h3 {
 				margin-bottom: 1.2rem;
 				font-family: Playfair Display;
+				color: $lake-blue;
 			}
 			.career {
 				display: flex;
@@ -151,6 +153,9 @@
 				@media (min-width: 680px) {
 					ul {
 						column-count: 3;
+						li {
+							padding: 0.15rem 0;
+						}
 					}
 				}
 				@media (max-width: 680px) {
@@ -160,4 +165,70 @@
 			}
 		}
 	}	
+}
+
+.projects {
+	padding: 20px 0 45px;
+	text-align: center;
+	box-sizing: border-box;
+	border: 1rem solid $white;	
+	background-color: #F0F0F0;
+	@media (max-width: 480px) {
+		border: none;
+		// padding: 0 1rem;
+	}
+	h2 {
+		margin-bottom: 1rem;
+	}
+	.likestore {
+		width: 80%;
+		margin: 0 auto;
+		.info {
+			margin: 1.2rem 0 1.5rem;
+			border-top: thin solid $light-gray;
+			border-bottom: thin solid $light-gray;
+			h3 {
+				line-height: 2.125rem;
+				span {
+					font-weight: 400;
+				}
+			}
+		}
+		.imgGroup {
+			@extend %d-flex-between;
+			@media (max-width: 768px) {
+				flex-direction: column;
+			}
+			.imgBox {
+				@media (min-width: 768px) {
+					width: 32.2%;
+				}
+				margin-bottom: 0.8rem;
+				position: relative;
+				.imgMask {
+					@extend %d-flex-center;
+					background-color: rgba($black, 0.65);
+					position: absolute;
+					opacity: 0;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					color: $white;
+					transition: all 0.4s ease-out;
+					&:hover {
+						opacity: 1;
+						cursor: pointer;
+					}
+					.txtBox {
+						.title {
+							font-family: Playfair Display;
+							margin-bottom: 1rem;
+							letter-spacing: 1px;
+						}
+					}
+				}
+			}
+		}
+	}
 }
