--- a/css/ui.css
+++ b/css/ui.css
@@ -127,6 +127,10 @@ h1 {
 
 /*BEGIN max-width:680px Vmin 手機版文字大小*/
 @media (max-width: 680px) {
+  .info h3 {
+    line-height: 6.5vmin !important;
+  }
+
   h1 {
     font-size: 10.5vmin;
   }
