--- a/sass/main.scss
+++ b/sass/main.scss
@@ -55,7 +55,7 @@
 			}
 		}
 		figcaption {
-			margin: 0 20px;
+			margin: 0 27px;
 			@media (min-width: 768px) {
 				width: 35%;
 				margin: 0 70px;
@@ -180,20 +180,48 @@
 	h2 {
 		margin-bottom: 1rem;
 	}
-	.likestore {
-		width: 80%;
+	>div {
+		width: 80%; 
 		margin: 0 auto;
-		.info {
-			margin: 1.2rem 0 1.5rem;
-			border-top: thin solid $light-gray;
-			border-bottom: thin solid $light-gray;
-			h3 {
-				line-height: 2.125rem;
-				span {
-					font-weight: 400;
+	}
+	.info {
+		margin: 1.2rem 0 1.5rem;
+		border-top: thin solid $light-gray;
+		border-bottom: thin solid $light-gray;
+		h3 {
+			line-height: 2.125rem;
+			span {
+				font-weight: 400;
+			}
+		}
+	}
+	.imgBox {
+		position: relative;
+		.imgMask {
+			@extend %d-flex-center;
+			background-color: rgba($black, 0.65);
+			position: absolute;
+			opacity: 0;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			color: $white;
+			transition: all 0.4s ease-out;
+			&:hover {
+				opacity: 1;
+				cursor: pointer;
+			}
+			.txtBox {
+				.title {
+					font-family: Playfair Display;
+					margin-bottom: 1rem;
+					letter-spacing: 1px;
 				}
 			}
 		}
+	}
+	.likestore {
 		.imgGroup {
 			@extend %d-flex-between;
 			@media (max-width: 768px) {
@@ -204,29 +232,32 @@
 					width: 32.2%;
 				}
 				margin-bottom: 0.8rem;
-				position: relative;
-				.imgMask {
-					@extend %d-flex-center;
-					background-color: rgba($black, 0.65);
-					position: absolute;
-					opacity: 0;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					color: $white;
-					transition: all 0.4s ease-out;
-					&:hover {
-						opacity: 1;
-						cursor: pointer;
-					}
-					.txtBox {
-						.title {
-							font-family: Playfair Display;
-							margin-bottom: 1rem;
-							letter-spacing: 1px;
-						}
-					}
+			}
+		}
+	}
+	.projectMix {
+		@extend %d-flex-between;
+		align-items: stretch;
+		@media (max-width: 1250px) {
+			flex-direction: column;
+		}
+		margin-top: 1.5rem;
+		.crm {
+			@media (min-width: 1250px) {
+				width: 65%;
+			}
+		}
+		.funoo {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			@media (min-width: 1250px) {
+				width: 30%;
+			}
+			@media (max-width: 1250px) {
+				margin-top: 1.5rem;
+				.imgBox {
+					margin-bottom: 0.8rem;
 				}
 			}
 		}
