--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
 @import "component.css";
 /* CSS Document */
 /* CSS Document */
-@import url("https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&display=swap");
-.projects .imgBox .imgMask, .profile figure, .cover {
+@import url("https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&family=Noto+Sans+TC:wght@700&display=swap");
+.projects .imgBox .imgMask, .books .imgBox .imgMask, .profile figure, .cover {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.projects .projectMix, .projects .likestore .imgGroup, .profile figure figcaption .btnGroup {
+.books .bookMix, .projects .projectMix, .projects .likestore .imgGroup, .profile figure figcaption .btnGroup {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -186,6 +186,49 @@
   }
 }
 
+.projects h2, .books h2 {
+  margin-bottom: 1rem;
+}
+.projects > div, .books > div {
+  width: 80%;
+  margin: 0 auto;
+}
+.projects .info, .books .info {
+  margin: 1.2rem 0 1.5rem;
+  border-top: thin solid rgba(0, 0, 0, 0.23);
+  border-bottom: thin solid rgba(0, 0, 0, 0.23);
+}
+.projects .info h3, .books .info h3 {
+  line-height: 2.125rem;
+}
+.projects .info h3 span, .books .info h3 span {
+  font-weight: 400;
+  font-family: Muli;
+}
+.projects .imgBox, .books .imgBox {
+  position: relative;
+}
+.projects .imgBox .imgMask, .books .imgBox .imgMask {
+  background-color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #FFFFFF;
+  transition: all 0.4s ease-out;
+}
+.projects .imgBox .imgMask:hover, .books .imgBox .imgMask:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+.projects .imgBox .imgMask .txtBox .title, .books .imgBox .imgMask .txtBox .title {
+  font-family: Playfair Display;
+  margin-bottom: 1rem;
+  letter-spacing: 1px;
+}
+
 .projects {
   padding: 20px 0 45px;
   text-align: center;
@@ -197,47 +240,6 @@
   .projects {
     border: none;
   }
-}
-.projects h2 {
-  margin-bottom: 1rem;
-}
-.projects > div {
-  width: 80%;
-  margin: 0 auto;
-}
-.projects .info {
-  margin: 1.2rem 0 1.5rem;
-  border-top: thin solid rgba(0, 0, 0, 0.23);
-  border-bottom: thin solid rgba(0, 0, 0, 0.23);
-}
-.projects .info h3 {
-  line-height: 2.125rem;
-}
-.projects .info h3 span {
-  font-weight: 400;
-}
-.projects .imgBox {
-  position: relative;
-}
-.projects .imgBox .imgMask {
-  background-color: rgba(0, 0, 0, 0.65);
-  position: absolute;
-  opacity: 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  color: #FFFFFF;
-  transition: all 0.4s ease-out;
-}
-.projects .imgBox .imgMask:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-.projects .imgBox .imgMask .txtBox .title {
-  font-family: Playfair Display;
-  margin-bottom: 1rem;
-  letter-spacing: 1px;
 }
 @media (max-width: 768px) {
   .projects .likestore .imgGroup {
@@ -282,6 +284,22 @@
   }
   .projects .projectMix .funoo .imgBox {
     margin-bottom: 0.8rem;
+  }
+}
+
+.books {
+  padding: 20px 0 45px;
+  text-align: center;
+}
+.books .bookMix {
+  align-items: stretch;
+}
+.books .bookMix .info h3 {
+  font-family: Noto Sans TC;
+}
+@media (min-width: 1250px) {
+  .books .bookMix .taitung, .books .bookMix .dish {
+    width: 48%;
   }
 }
 
