--- a/sass/main.scss
+++ b/sass/main.scss
@@ -184,6 +184,9 @@
 			span {
 				font-weight: 400;
 				font-family: Muli;
+				@media (max-width: 768px) {
+					display: block;
+				}
 			}
 		}
 	}
@@ -191,7 +194,7 @@
 		position: relative;
 		.imgMask {
 			@extend %d-flex-center;
-			background-color: rgba($black, 0.65);
+			background-color: rgba($black, 0.5);
 			position: absolute;
 			opacity: 0;
 			top: 0;
@@ -207,7 +210,7 @@
 			.txtBox {
 				.title {
 					font-family: Playfair Display;
-					margin-bottom: 1rem;
+					margin-bottom: 0.4rem;
 					letter-spacing: 1px;
 				}
 			}
@@ -271,18 +274,50 @@
 .books {
 	padding: 20px 0 45px;
 	text-align: center;
+	@media (max-width: 768px) {
+		h2 {
+			margin-bottom: 0;
+		}
+	}
+	.info {
+		border-top: none;
+		h3 {
+			font-family: Noto Sans TC;
+		}
+		@media (max-width: 768px) {
+			margin-top: 0.7rem;
+			padding-bottom: 0.5rem;
+		}
+	}
 	.bookMix {
 		@extend %d-flex-between;
 		align-items: stretch;
+		margin-top: 2.5rem;
+		@media (max-width: 768px) {
+			flex-direction: column;
+			margin-top: 0;
+		}
 
-		.info {
-			h3 {
-				font-family: Noto Sans TC;
+		>div {
+			@media (min-width: 1250px) {
+				width: 49%;
+				&.single {
+					width: 23.5%;
+				}
+			}
+			@media (max-width: 768px) {
+				margin-top: 1.5rem;
 			}
 		}
-		.taitung, .dish {
-			@media (min-width: 1250px) {
-				width: 48%;
+		.imgBox {
+			.imgMask {
+				.txtBox {
+					p {
+						&.title {
+							font-family: Noto Serif TC;
+						}
+					}
+				}
 			}
 		}
 	}
