--- a/css/ui.css
+++ b/css/ui.css
@@ -58,9 +58,7 @@ img {
   padding: 0.5rem 1rem;
 }
 .btn.btn-primary:hover {
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.6);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.6);
-  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.6), 0 2px 2px 0 rgba(0, 0, 0, 0.6), 0 1px 5px 0 rgba(0, 0, 0, 0.6);
 }
 
 /*BEGIN font-size*/
@@ -111,6 +109,7 @@ h1 {
 
 .f-15 {
   font-size: 0.935rem;
+  line-height: 1.3rem;
 }
 
 .f-14 {
@@ -174,6 +173,7 @@ h1 {
 
   .f-15 {
     font-size: 4.7vmin;
+    line-height: 6.6vmin;
   }
 
   .f-14 {
