--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,7 +49,7 @@
 		@media (max-width: 768px) {
 			flex-direction: column;
 		}
-		@media (min-width: 500px) and (max-width: 880px) {
+		@media (min-width: 500px) and (max-width: 980px) {
 			img {
 				width: 50%;
 			}
@@ -70,6 +70,7 @@
 					padding-left: 15px;
 					margin-left: 7px;
 					border-left: thin solid $gray;
+					display: inline-block;
 				}
 			}
 			p {
@@ -110,24 +111,36 @@
 	}
 	.modal {
 		.modal-body {
-			h3 {
-				margin-bottom: 1.2rem;
-				font-family: Playfair Display;
-				color: $lake-blue;
+			.label {
+				color: $gray;
 			}
 			.career {
 				display: flex;
-				margin: 2rem 1.5rem;
+				margin: 1.5rem;
 				.period {
-					width: 30%;
+					width: 34%;
 					padding-right: 5%;
+					.company {
+						font-family: Playfair Display;
+					}
 					.location {
+						font-size:.812rem;
+						position: relative;
 						color: $gray;
 						margin-top: 0.4rem;
+						padding-left: 1.1rem;
+						&:before {
+							@extend %pseudo-element;
+							width: 15px;
+							height: 15px;
+							background: url(../images/icons/pin.svg) top no-repeat;
+							top: 1px;
+							filter: opacity(0.3);							
+						}
 					}
 				}
 				.description {
-					width: 64%;
+					width: 60%;
 					.jobTitle {
 						color: rgba($black, 0.8);
 						padding-bottom: 0.4rem;
@@ -162,6 +175,26 @@
 					border-bottom: thin solid $light-gray;
 					padding-bottom: 0.7rem;
 				}
+			}
+			@media (min-width: 681px) {
+				background-color: #F5F5F5;
+				.career {
+					align-items: stretch;
+					background: linear-gradient(135deg, $gray 15px, $white 0) top left;
+					padding: 1rem;
+					min-height: 85px;
+					border-radius: 4px;
+					box-shadow: 0 2px 1px -1px rgba($black, 0.2),
+								0 1px 1px 0 rgba($black, 0.14),
+								0 1px 3px 0 rgba($black, 0.12);
+					.period {
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						margin-right: 5%;
+						border-right: thin solid rgba($black, 0.12);
+					}
+				}					
 			}
 		}
 	}	
@@ -226,7 +259,6 @@
 	background-color: #F0F0F0;
 	@media (max-width: 480px) {
 		border: none;
-		// padding: 0 1rem;
 	}
 	.likestore {
 		.imgGroup {
@@ -293,7 +325,7 @@
 		@extend %d-flex-between;
 		align-items: stretch;
 		margin-top: 2.5rem;
-		@media (max-width: 768px) {
+		@media (max-width: 1250px) {
 			flex-direction: column;
 			margin-top: 0;
 		}
@@ -305,18 +337,17 @@
 					width: 23.5%;
 				}
 			}
-			@media (max-width: 768px) {
+			@media (max-width: 1250px) {
 				margin-top: 1.5rem;
 			}
 		}
 		.imgBox {
-			.imgMask {
-				.txtBox {
-					p {
-						&.title {
-							font-family: Noto Serif TC;
-						}
-					}
+			overflow: hidden;
+			img {
+				&:hover {
+					cursor: pointer;
+					transform: scale(1.08);
+					transition: all 1s ease-out;
 				}
 			}
 		}
