--- a/css/component.css
+++ b/css/component.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 /* CSS Document */
-.modal .modal-content .modal-header {
+.my-footer > div, .modal .modal-content .modal-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -47,12 +47,6 @@
     flex-direction: row-reverse;
   }
 }
-@media (min-width: 680px) {
-  .modal .modal-content .modal-header {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-  }
-}
 .modal .modal-content .modal-header .close {
   cursor: pointer;
   width: 16px;
@@ -69,14 +63,23 @@
 }
 @media (min-width: 680px) {
   .modal .modal-content .modal-body {
-    max-height: 65vh;
+    max-height: 75vh;
   }
 }
 .modal .modal-content .modal-footer {
   padding: 0.4rem 1rem;
 }
+@media (min-width: 680px) {
+  .modal.no-action .modal-body {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+}
 .modal.no-action .modal-footer {
   display: none;
+}
+.modal.modal-lg {
+  max-width: 850px;
 }
 
 .modal-open {
@@ -131,6 +134,97 @@
 }
 .tooltip:hover .tooltip-text {
   visibility: visible;
+}
+
+.my-footer {
+  background: #7C98A3;
+  border: 1rem solid #FFFFFF;
+  box-sizing: border-box;
+  color: rgba(255, 255, 255, 0.8);
+  padding: 2.5rem 1rem 3.5rem;
+  margin-top: 1rem;
+}
+@media (max-width: 480px) {
+  .my-footer {
+    border: none;
+    padding: 1rem;
+  }
+}
+.my-footer > div {
+  align-items: baseline;
+  width: 90%;
+  margin: 0 auto;
+}
+@media (min-width: 769px) {
+  .my-footer > div {
+    width: 60%;
+    align-items: flex-end;
+  }
+}
+@media (max-width: 768px) {
+  .my-footer > div {
+    flex-direction: column-reverse;
+  }
+}
+.my-footer > div .left-col {
+  letter-spacing: 1px;
+}
+.my-footer > div .left-col ul {
+  margin: 0 0 2rem;
+  list-style: none;
+  padding-left: 0;
+}
+.my-footer > div .left-col ul li {
+  text-transform: uppercase;
+  margin: 0.8rem 0;
+}
+@media (min-width: 769px) {
+  .my-footer > div .left-col ul li {
+    display: inline-block;
+    margin-right: 1rem;
+    padding-right: 1rem;
+    border-right: thin solid #FFFFFF;
+  }
+  .my-footer > div .left-col ul li:last-child {
+    border: none;
+  }
+}
+@media (min-width: 769px) {
+  .my-footer > div .left-col .contact {
+    margin-top: 2.5rem;
+  }
+}
+.my-footer > div .left-col .contact div {
+  margin: 0.6rem 0;
+}
+.my-footer > div .left-col .contact div img {
+  width: 16px;
+  margin-right: 6px;
+  filter: invert(1) opacity(0.8);
+}
+.my-footer > div .left-col .contact div p {
+  display: inline-block;
+}
+.my-footer > div .left-col .contact div:last-child img {
+  vertical-align: baseline;
+}
+.my-footer > div .left-col .copyright {
+  margin-top: 1rem;
+}
+@media (max-width: 768px) {
+  .my-footer > div .right-col {
+    margin-bottom: 1.6rem;
+    padding-bottom: 0.5rem;
+    border-bottom: thin solid rgba(255, 255, 255, 0.5);
+  }
+}
+.my-footer > div .right-col p {
+  margin-top: 0.8rem;
+  padding-top: 0.3rem;
+  border-top: thin solid rgba(255, 255, 255, 0.5);
+}
+.my-footer > div .right-col p span {
+  display: block;
 }
 
 /*# sourceMappingURL=component.css.map */
