--- a/sass/component.scss
+++ b/sass/component.scss
@@ -35,10 +35,6 @@
 			@media (max-width: 680px) {
 				flex-direction: row-reverse;
 			}
-			@media (min-width: 680px) {
-				border-top-left-radius: 4px;
-				border-top-right-radius: 4px;
-			}
 			.close {
 				cursor: pointer;
 				width: 16px;
@@ -54,7 +50,7 @@
 			overflow-y: auto;
 			height: calc(100vh - 4rem);
 			@media (min-width: 680px) {
-				max-height: 65vh;
+				max-height: 75vh;
 			}
 		}
 		.modal-footer {
@@ -62,9 +58,18 @@
 		}
 	}
 	&.no-action {
+		.modal-body {
+			@media (min-width: 680px) {
+				border-bottom-left-radius: 4px;
+				border-bottom-right-radius: 4px;
+			}
+		}
 		.modal-footer {
 			display: none;
 		}
+	}
+	&.modal-lg {
+		max-width: 850px;
 	}
 }
 .modal-open {
@@ -120,6 +125,93 @@
 	&:hover {
 		.tooltip-text {
 			visibility: visible;
+		}
+	}
+}
+
+// Footer
+.my-footer {
+	background: $dark-blue;
+	border: 1rem solid $white;
+	box-sizing: border-box;
+	color: rgba($white, 0.8);
+	padding: 2.5rem 1rem 3.5rem;
+	margin-top: 1rem;
+	@media (max-width: 480px) {
+		border: none;
+		padding: 1rem;
+	}
+	>div {
+		@extend %d-flex-between;
+		align-items: baseline;
+		width: 90%;
+		margin: 0 auto;
+		@media (min-width: 769px) {
+			width: 60%;
+			align-items: flex-end;
+		}
+		@media (max-width: 768px) {
+			flex-direction: column-reverse;
+		}
+		.left-col {
+			letter-spacing: 1px;
+			ul {
+				margin: 0 0 2rem;
+				list-style: none;
+				padding-left: 0;
+				li {
+					text-transform: uppercase;
+					margin: 0.8rem 0;
+					@media (min-width: 769px) {
+						display: inline-block;
+						margin-right: 1rem;
+						padding-right: 1rem;
+						border-right: thin solid $white;
+						&:last-child {
+							border: none;
+						}
+					}
+				}
+			}
+			.contact {
+				@media (min-width: 769px) {
+					margin-top: 2.5rem;
+				}
+				div {
+					margin: 0.6rem 0;
+					img {
+						width: 16px;
+						margin-right: 6px;
+						filter: invert(1) opacity(0.8);
+					}
+					p {
+						display: inline-block;
+					}
+					&:last-child {
+						img {
+							vertical-align: baseline;
+						}
+					}
+				}
+			}
+			.copyright {
+				margin-top: 1rem;
+			}
+		}
+		.right-col {
+			@media (max-width: 768px) {
+				margin-bottom: 1.6rem;
+				padding-bottom: 0.5rem;
+				border-bottom: thin solid rgba($white, 0.5);
+			}
+			p {
+				margin-top: 0.8rem;
+				padding-top: 0.3rem;
+				border-top: thin solid rgba($white, 0.5);
+				span {
+					display: block;
+				}
+			}
 		}
 	}
 }
