--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,9 @@
 @import "variable";
 @import "extend";
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&family=Noto+Sans+TC:wght@700&display=swap');
+.contentWrap {
+	position: relative;
+}
 .cover {
 	@extend %d-flex-center;
 	position: relative;
@@ -213,7 +216,7 @@
 		margin-bottom: 1rem;
 	}
 	>div {
-		width: 80%; 
+		width: 78%; 
 		margin: 0 auto;
 	}
 	.info {
