--- a/css/ui.css
+++ b/css/ui.css
@@ -15,6 +15,13 @@ h1, h2 {
   font-family: Playfair Display;
 }
 
+a {
+  text-decoration: none;
+}
+a:active {
+  color: inherit;
+}
+
 img {
   max-width: 100%;
   vertical-align: middle;
