--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -13,7 +13,12 @@ body, html {
 h1, h2 {
 	font-family: Playfair Display;
 }
-
+a {
+	text-decoration: none;
+	&:active {
+		color: inherit;
+	}
+}
 img {
 	max-width: 100%;
 	vertical-align: middle;
