--- a/css/component.css
+++ b/css/component.css
@@ -243,5 +243,8 @@
 .stickyNav ul li {
   margin: 12px 0;
 }
+.stickyNav ul li.active {
+  font-weight: bold;
+}
 
 /*# sourceMappingURL=component.css.map */
