--- a/css/main.css
+++ b/css/main.css
@@ -187,19 +187,24 @@
     margin-top: 0.6rem;
   }
 }
-@media (min-width: 680px) {
-  .profile .modal .modal-body .list ul {
-    column-count: 3;
-  }
-  .profile .modal .modal-body .list ul li {
-    padding: 0.15rem 0;
-  }
-}
 @media (max-width: 680px) {
   .profile .modal .modal-body .list {
     border-bottom: thin solid rgba(0, 0, 0, 0.23);
-    padding-bottom: 0.7rem;
+    margin-bottom: 1.5rem;
   }
+}
+.profile .modal .modal-body .list ul {
+  padding-left: 1.5rem;
+}
+@media (min-width: 480px) {
+  .profile .modal .modal-body .list ul {
+    column-count: 3;
+    padding-left: 3rem;
+    margin: 0.5rem 0 1.5rem;
+  }
+}
+.profile .modal .modal-body .list ul li {
+  padding: 0.15rem 0;
 }
 @media (min-width: 681px) {
   .profile .modal .modal-body {
@@ -219,6 +224,9 @@
     justify-content: space-between;
     margin-right: 5%;
     border-right: thin solid rgba(0, 0, 0, 0.12);
+  }
+  .profile .modal .modal-body .career.school {
+    align-items: center;
   }
   .profile .modal .modal-body .career.school .period {
     width: 42%;
