--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -46,6 +46,12 @@ img {
 				transition: all 1s ease-out;
 			}
 		}
+		&.icon-border-none {
+			background-color: transparent;
+			img {
+				width: 20px;
+			}
+		}
 		img {
 			width: 15px;
 			position: relative;
