--- a/css/ui.css
+++ b/css/ui.css
@@ -2,6 +2,16 @@
 /* CSS Document */
 /* CSS Document */
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script&family=Muli:wght@400;800&family=Noto+Serif+TC:wght@700&family=Playfair+Display:ital,wght@0,700;1,700&family=Noto+Sans+TC:wght@700&display=swap");
+.quote:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 body, html, figure, p, h3 {
   margin: 0;
 }
@@ -199,5 +209,35 @@ h1 {
   }
 }
 /*END font-size*/
+.quote {
+  font-family: Oleo Script;
+  margin: 4rem 0 4.5rem;
+  position: relative;
+  padding-left: 42px;
+  color: rgba(0, 0, 0, 0.23);
+}
+@media (max-width: 480px) {
+  .quote {
+    margin: 15px 0;
+    padding-left: 25px;
+  }
+}
+.quote:before {
+  width: 28px;
+  height: 28px;
+  background: url(/images/icons/left_quote.svg) top no-repeat;
+  top: -5px;
+  filter: grayscale(1) opacity(0.5);
+}
+@media (max-width: 480px) {
+  .quote:before {
+    width: 16px;
+    height: 16px;
+    top: -3px;
+  }
+}
+.quote span {
+  display: inline-block;
+}
 
 /*# sourceMappingURL=ui.css.map */
