--- a/css/work.css
+++ b/css/work.css
@@ -53,5 +53,10 @@
   width: 50%;
   text-align: center;
 }
+.section-desc figure p.quote {
+  width: 50%;
+  margin: 2rem auto;
+  text-align: left;
+}
 
 /*# sourceMappingURL=work.css.map */
