--- a/sass/ui.scss
+++ b/sass/ui.scss
@@ -124,3 +124,31 @@ h1{font-size:4.3rem;}
   .f-13,.f-12{font-size:4vmin;}
 }
 /*END font-size*/
+
+.quote {
+	font-family: Oleo Script;
+	margin: 4rem 0 4.5rem;
+	position: relative;
+	padding-left: 42px;
+	color: $light-gray;
+	@media (max-width: 480px) {
+		margin: 15px 0;
+		padding-left: 25px;
+	}
+	&:before {
+		@extend %pseudo-element;
+		width: 28px;
+		height: 28px;
+		background: url(/images/icons/left_quote.svg) top no-repeat;
+		top: -5px;
+		filter: grayscale(1) opacity(0.5);
+		@media (max-width: 480px) {
+			width: 16px;
+			height: 16px;
+			top: -3px;
+		}
+	}
+	span {
+		display: inline-block;
+	}
+}
