--- a/sass/work.scss
+++ b/sass/work.scss
@@ -41,5 +41,10 @@
 	figure {
 		width: 50%;
 		text-align: center;
+		p.quote {
+			width:50%;
+			margin: 2rem auto;
+			text-align: left;
+		}
 	}
 }
