--- a/sass/main.scss
+++ b/sass/main.scss
@@ -44,6 +44,68 @@
 	}
 }
 
+// Nav
+.stickyNav {
+	right: 0;
+	top: 0;
+	padding: 0 0 0 12px;
+	z-index: 2;
+	font-size: 14px;
+	letter-spacing: 0.8px;
+	text-transform: uppercase;
+	transition: all 1s ease-out;
+	@media (min-width: 1150px) {
+		top: 16px;
+		border-left: thin solid $light-gray;
+	}
+	@media (max-width: 1149px) {
+		background: rgba($white, 0.85);
+		width: 100%;
+		text-align: right;
+		height: 45px;
+	}
+	button {
+		&.open-menu {
+			@media (min-width: 1150px) {
+				display: none;
+			}
+			@media (max-width: 1149px) {
+				margin: 5px 16px;
+			}
+		}
+	}
+	ul {
+		list-style: none;
+		padding-left: 0;
+		margin: 0;
+		@media (max-width: 1149px) {
+			&.menu-mobile-hidden {
+				display: none;
+			}
+			background-color: $white;
+			box-shadow: 0 1px 5px 0 $gray;
+		}
+		li {
+			padding: 2px 8px 3px 8px;
+			position: relative;
+			@media (min-width: 1150px) {
+				margin: 12px 0;
+			}
+			@media (max-width: 1149px) {
+				text-align: center;
+				padding: 1rem 0;
+			}
+			&:hover {
+				cursor: pointer;
+			}
+			&.active {
+				background: $black;
+				color: $white;
+			}
+		}
+	}
+}
+
 .profile {
 	padding: 45px 0;
 	figure {
